--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "@emotion/core": "10.0.14",
     "@emotion/styled": "10.0.14",
-    "react": "16.8.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "react-beautiful-dnd": "11.0.4",
-    "react-dom": "16.8.6",
-    "react-scripts": "3.0.1",
-    "reset-css": "4.0.1"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.46.2",
+    "react-redux": "^8.1.2",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
