--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "10.0.14",
-    "@emotion/styled": "10.0.14",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^10.0.14",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.5",
-    "react-beautiful-dnd": "11.0.4",
     "react": "^18.0.0",
+    "react-beautiful-dnd": "11.0.4",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.46.2",
     "react-redux": "^8.1.2",
