--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.46.2",
     "react-redux": "^8.1.2",
+    "react-responsive": "^9.0.2",
     "react-scripts": "^5.0.1",
+    "react-toggle": "^4.1.3",
     "redux": "^4.2.1",
+    "use-persisted-state": "^0.3.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
